# iam-microservice

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  manage.py  pyproject.toml
cli/: __init__.py
conf/: __init__.py  base.py  development.py  production.py  staging.py
shared/: types.py  utils.py
src/application/ports/outbound/: db.py
src/conf/: __init__.py  base.py  production.py
src/domain/models/: __init__.py  base.py  user.py
src/infra/db/: __init__.py  adapter.py  db.py
src/infra/db/migrations/: env.py
src/presentation/api/http/: asgi.py  routers.py  utils.py
src/presentation/api/http/controllers/admin/: __init__.py
src/presentation/api/http/controllers/public/: __init__.py  misc.py  users.py
src/presentation/api/http/middleware/: __init__.py  allowed_hosts.py
src/presentation/api/http/routers/: __init__.py
src/presentation/api/http/routers/public/: misc.py  users.py
src/presentation/api/rest/: asgi.py
src/presentation/api/rest/middleware/: cors.py
src/presentation/api/rest/routers/: __init__.py
src/presentation/api/rest/routers/public/: misc.py
src/presentation/cli/: commands.py
src/settings/: base.py
