[project]
name = "iam-microservice"
version = "0.0.1"
description = "An Identity Access Manager microservice using FastAPI and an Hexagonal architecture"
authors = [{ name = "firminoneto11", email = "firminoneto11@hotmail.com" }]
dependencies = [
    "typer==0.12.3",
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "environs==11.0.0",
    "fastapi==0.111.0",
    "pydantic==2.7.4",
    "asyncpg==0.29.0",
    "anyio==4.4.0",
    "redis==5.0.7",
    "uvicorn==0.30.1",
    "httptools==0.6.1",
    "httpx==0.27.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff==0.5.0",
    "pytest==8.2.2",
    "pytest-env==1.1.3",
    "pytest-asyncio==0.23.7",
    "coverage==7.5.4",
    "pre-commit==3.7.1",
    "bandit==1.7.9",
    "aiosqlite==0.20.0",
    "pyright==1.1.369",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iam_microservice"]

# Ruff configs
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configs
[tool.pytest.ini_options]
addopts = "-s -v --durations=5"
markers = []
asyncio_mode = "auto"

# Pytest-Env configs
[tool.pytest_env]
IAM_MS_ENVIRONMENT = "testing"

# Coverage configs
[tool.coverage.run]
omit = [
    "test/*",
    "tests/*",
    "*conftest.py",
    "venv/*",
    ".venv/*",
    "manage.py",
    "*cli/*",
]
data_file = ".coverage/coverage"
branch = false

[tool.coverage.report]
skip_covered = true
precision = 2
fail_under = 80
exclude_also = ["if TYPE_CHECKING:", "_match module:"]

[tool.coverage.html]
directory = ".coverage/html-report"
skip_covered = true

# Pyright configs
[tool.pyright]
exclude = [".venv/", "venv/", "*/__pycache__/"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "./.venv"
typeCheckingMode = "strict"
# strictDictionaryInference = false
# strictSetInference = false
# strictListInference = false
reportUnusedImport = false

# typeshedPath = ".venv/lib/python3.12/site-packages"
